# DFTorch

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  KSPACE_ROADMAP.md  README.md  personal_github.pub  pyproject.toml  setup.py  tmp83lxevhg
.github/workflows/: container-release.yml  container-tests.yml  release.yml  tests.yml
.ipynb_checkpoints/: BondIntegral-checkpoint.py  Constants-checkpoint.py  CoulombMatrix-checkpoint.py  Energy-checkpoint.py  Forces-checkpoint.py  H0andS-checkpoint.py  S_fpp_pi-checkpoint.csv  S_fpp_sigma-checkpoint.csv  S_fsp_sigma-checkpoint.csv  S_fss_sigma-checkpoint.csv  SlaterKosterPair-checkpoint.py  Tools-checkpoint.py  fpp_pi-checkpoint.csv  fpp_sigma-checkpoint.csv  fps_sigma-checkpoint.csv  fsp_sigma-checkpoint.csv  fss_sigma-checkpoint.csv  nearestneighborlist-checkpoint.py
Matlab_for_Pytorch/: ._ShadowPot.m  AtomicDensityMatrix.m  BondIntegral.m  CoulombMatrix.m  DM_Fermi_x.m  Energy.m  Ewald_Real_Space.m  Ewald_k_Space.m  Fermi_PRT.m  Forces.m  GetdC.m  GetdH.m  GetdS.m  H0_and_S.m  KK.mat  Kernel_Fermi.m  LoadBondIntegralParameters_H.m  LoadBondIntegralParameters_S.m  LoadPairPotParameters.m  PairPotentialForces.m  SCFx.m  ScaleTail.m  ShadowEnergy.m  ShadowForces.m  ShadowPot.m  Slater_Koster_Pair.m  XLBOMD.m  buildNeighborList.m  nearestneighborlist.m
experiments/: 1_tutorial.ipynb  2AS9.xyz  2_tutorial_freq.ipynb  3_tutorial_deltaSCF.ipynb  C4.xyz  C840.xyz  COORD_ACETONE.xyz  COORD_far.xyz  DDP.py  DDP_2.py  H2.xyz  RDX_1K.xyz  RDX_trj.xyz  benzene_adduct_o2.xyz  benzene_adduct_o2_cell.xyz  deltascf_acetone_dtscaling.py  detailed.out  dftb_in.hsd  dispersion.py  filtered_9ODB.xyz  graph.ipynb  m10_o20.xyz  m30_o60.xyz  m30_o70.xyz  m6_o12.xyz  molecule_counts.csv  repulsion.ipynb  water_30.xyz
experiments/ci9b01171_si_001/: reference_energies.txt
experiments/helices/: ala010.xyz  ala020.xyz  ala040.xyz  ala080.xyz  ala160.xyz
experiments/helices_wide/: ala010.xyz  ala020.xyz  ala040.xyz  ala080.xyz  ala160.xyz
experiments/sk/: ppots.dftb
src/DFTorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dftorch/: AtomicDensityMatrix.py  BondIntegral.py  Constants.py  CoulombMatrix.py  CoulombMatrixBatch.py  DM_Fermi.py  DM_Fermi_x.py  ESDriver.py  Elements.py  Energy.py  Fermi_PRT.py  Forces.py  ForcesBatch.py  H0andS.py  Kernel_Fermi.py  MD.py  Optimizer.py  RepulsiveSpline.py  SCF.py  SlaterKosterPair.py  Spin.py  Structure.py  Tools.py  XLTools.py  __init__.py  _atomic_density_matrix.py  _bond_integral.py  _cell.py  _coulomb_matrix.py  _coulomb_matrix_batch.py  _dftd3.py  _dm_fermi.py  _dm_fermi_x.py  (+25 more)
src/dftorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: 1_tutorial.ipynb  8RNT.ipynb  8RNT.xyz  C1.xyz  C2.xyz  C3.xyz  CH2.xyz  COORD.xyz  COORD1.xyz  COORD_8WATER.xyz  DDP.py  DDP_2.py  Ftot_1600.pt  Ftot_840.pt  Ftot_840_f32.pt  Ftot_840_f64.pt  H0_large_pad.pt  H2.xyz  O2.xyz  S_large_pad.pt  Vr_large_pad.pt  analyze_data.ipynb  backprop.ipynb  charge.pt  charge_all32.pt  charge_all32_d64.pt  dH0_large_pad.pt  dS_large_pad.pt  dVr_large_pad.pt  e_repulsion.ipynb  ewald_PME.ipynb  f_PME.pt  graph.ipynb  k-space.ipynb  md_trj.xyz  open-shell.ipynb  param_fit.ipynb  pyscf.ipynb  q_8RNT_cs.pt  q_spin_atom_8RNT_os.pt  (+14 more)
(+788 files in other folders)
