[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dftorch"
version = "0.1.4"
description = "A Density Functional Tight Binding (SCC-DFTB) implementation in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "setuptools",
  "pandas"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pre-commit"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-q"]

[tool.ruff]
exclude = [
  "src/dftorch/_legacy",
]
