[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dftorch"
version = "0.1.5"
description = "A Density Functional Tight Binding (SCC-DFTB) implementation in PyTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "setuptools",
  "pandas",
  "nvalchemi-toolkit-ops"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pre-commit"]
sedacs = ["mpi4py", "numba", "toml", "scikit-learn"]

[dependency-groups]
dev = [
  "pytest>=7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-q"]

[tool.ruff]
exclude = [
  "src/dftorch/_legacy",
  ".git",
  ".venv",
  "__pycache__",
  "*.ipynb",  # Exclude all notebooks

]
