[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dftorch"
version = "0.1.5"
description = "A Density Functional Tight Binding (SCC-DFTB) implementation in PyTorch"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Maksim Kulichenko" },
  { name = "Anthony P. Baldo" },
  { name = "Anders M. N. Niklasson" },
]
keywords = [
  "dftb",
  "density functional tight binding",
  "pytorch",
  "gpu",
  "molecular dynamics",
  "quantum chemistry",
  "atomistic simulation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Environment :: GPU",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "pandas",
  "nvalchemi-toolkit-ops",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff", "mypy", "pre-commit"]
sedacs = ["mpi4py", "numba", "toml", "scikit-learn"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-q"]
markers = [
  "slow: marks tests as slow (deselect with: -m 'not slow')",
  "gpu: marks tests that require a GPU",
]

[tool.ruff]
exclude = [
  "src/dftorch/_legacy",
  ".git",
  ".venv",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "S", "I", "PERF"]
fixable = ["I"]
ignore = ["E501", "S311"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["S101"]
"experiments/*.py" = ["E402"]
